# solana

./: .env.example  .gitignore  .gitmodules  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  deny.toml  package-lock.json  package.json  skills-lock.json  tsconfig.json
.claude/: settings.json
.github/workflows/: program-ci.yml
.solana/: init.sh
docs/: MARKETING.md  REQUIREMENTS.md  RESEARCH.md  SPECIFICATION.md
idl/: README.md  error-map.json
migrations/: deploy.ts
openspec/changes/2026-05-15-per-fleet-adapter-registry/: design.md  proposal.md  tasks.md
openspec/changes/add-devnet-deploy-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/add-execute-swap-and-yield/: tasks.md
openspec/changes/add-execute-transfer/: design.md  proposal.md  tasks.md
openspec/changes/add-group-name-to-group-config/: design.md  proposal.md  tasks.md
openspec/changes/add-idl-publishing/: design.md  tasks.md
openspec/changes/add-owner-instructions/: design.md  tasks.md
openspec/changes/bind-agent-mint/: proposal.md  tasks.md
openspec/changes/drop-per-recipient-spending-cap/: design.md  tasks.md
openspec/changes/execute-transfer-and-whitelist-fixes/: proposal.md  tasks.md
openspec/changes/init-anchor-workspace/: design.md  proposal.md  tasks.md
openspec/specs/deploy-pipeline/: spec.md
openspec/specs/group-provisioning/: spec.md
openspec/specs/idl-publishing/: spec.md
openspec/specs/lending-execution/: spec.md
openspec/specs/program-hardening/: spec.md
openspec/specs/program-state/: spec.md
openspec/specs/swap-execution/: spec.md
openspec/specs/transfer-execution/: spec.md
openspec/specs/whitelist-management/: spec.md
openspec/specs/workspace-tooling/: spec.md
programs/enclz/: Cargo.toml
programs/enclz/src/: constants.rs  errors.rs  lib.rs
programs/enclz/src/instructions/: add_agent.rs  add_to_whitelist.rs  emergency_withdraw.rs  execute_lending_op.rs  execute_swap.rs  execute_transfer.rs  initialize_group.rs  mod.rs  remove_from_whitelist.rs  renew_whitelist_entry.rs  update_agent_limits.rs  update_backend_operator.rs
programs/enclz/src/state/: agent_wallet.rs  group_config.rs  mod.rs  whitelist_entry.rs
programs/enclz/src/util/: cpi.rs  fee.rs  mod.rs  time.rs
programs/enclz/tests/: execute_lending_op.rs  execute_swap.rs  execute_transfer.rs  owner_instructions.rs
programs/enclz/tests/common/: mod.rs
scripts/: build-sdk.mjs  check-coverage.mjs  check-idl-coverage.mjs  check-idl-sync.mjs  sync-idl.mjs
sdk/: README.md  package.json  tsconfig.json
sdk/src/: index.ts
test-programs/test_stubs/: Cargo.toml
test-programs/test_stubs/src/: lib.rs
tests/: enclz.spec.ts  execute_lending_op.spec.ts  execute_swap.spec.ts  execute_transfer.spec.ts  owner_instructions.spec.ts  smoke.ts
(+42 files in other folders)
