[package]
name = "enclz"
version = "0.1.0"
description = "Enclz on-chain spend-policy enforcement program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "enclz"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.1"
anchor-spl = "1.0.1"

[dev-dependencies]
litesvm = "0.11"
litesvm-token = "0.11"
solana-account = "3"
solana-clock = "3"
solana-instruction = "3"
solana-keypair = "3"
solana-message = "3"
solana-pubkey = "3"
solana-signer = "3"
solana-transaction = "3"
solana-transaction-error = "3"
